--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <h2 style="cursor: none;">Sanyam Jain</h2>
       <div>
         <a href="#about">About</a>
+        <a href="#research">Research</a>
         <a href="#internship">Internships</a>
         <a href="#achievement">Achievements</a>
         <a href="#project">Projects</a>
@@ -25,6 +26,73 @@
       </div>
       <div class="profile-img">
         <img src="assests/Myself.png" alt="Sanyam Jain" />
+      </div>
+    </div>
+    <div id="research">
+      <div class="center-gradient"></div>
+      <div class="middle-gradient"></div>
+      <h1 class="section-title">Research</h1>
+      <div class="research-cards">
+        <div class="research-card">
+          <span class="project-decision">Awaiting Decision at icSoftComp2023</span>
+          <img class="research-illustrator" src="assests/research-card-01.png" alt="research" />
+          <div>
+            <h2>Inappropriate Text Detection and Rephrasing using NLP</h2>
+            <p class="project-highlight">Guide: Dr BalaKrushna Tripathy</p>
+            <div class="research-additional">
+              <div class="github-code">
+                <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                <span>Repository</span>
+              </div>
+              <span class="project-highlight">Learn More</span>
+            </div>
+          </div>
+        </div>
+        <div class="research-card">
+          <span class="project-decision">Accepted at ICTCS 2023</span>
+          <img class="research-illustrator" src="assests/research-card-02.png" alt="research" />
+          <div>
+            <h2>Krushi Snehi: A Web-based Application for Safe and Smart Farming</h2>
+            <p class="project-highlight">Guide: Dr Sumaiya Thaseen</p>
+            <div class="research-additional">
+              <div class="github-code">
+                <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                <span>Repository</span>
+              </div>
+              <span class="project-highlight">Learn More</span>
+            </div>
+          </div>
+        </div>
+        <div class="research-card">
+          <span class="project-decision">Accepted at ICCST 2023</span>
+          <img class="research-illustrator" src="assests/research-card-03.png" alt="research" />
+          <div>
+            <h2>Revolutionizing Malware Detection: Feature-Based Approach for Targeting Diverse Malware Categories</h2>
+            <p class="project-highlight">Guide: Dr Sumaiya Thaseen</p>
+            <div class="research-additional">
+              <div class="github-code">
+                <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                <span>Repository</span>
+              </div>
+              <span class="project-highlight">Learn More</span>
+            </div>
+          </div>
+        </div>
+        <div class="research-card">
+          <span class="project-decision">Awaiting Decision at SSRN Elsevier Journal 2023</span>
+          <img class="research-illustrator" src="assests/research-card-04.png" alt="research" />
+          <div>
+            <h2>INR FOREX Forecasting using Machine Learning and Deep Learning</h2>
+            <p class="project-highlight">Guide: Dr Aswani Kumar Cherukuri</p>
+            <div class="research-additional">
+              <div class="github-code">
+                <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                <span>Repository</span>
+              </div>
+              <span class="project-highlight">Learn More</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div id="internship">
@@ -136,6 +204,10 @@
             <p class="project-title">Different Hand gesture Recognition using CNN</p>
             <div class="project-desc-odd">
               <p>An application which can classify 10 different type of Hand gestures using CNN and python. With an high accuracy. Moreover, the application can also identify the same in real time video or webcam taking care of noise in image.</p>
+              <div class="github-code-02">
+                <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
+                <span>Repository</span>
+              </div>
             </div>
             <img src="assests/project-icon.png" alt="icon" />
             <img src="assests/project-icon.png" alt="icon" />
@@ -154,6 +226,10 @@
             <p class="project-title">Windows Secure Folder using Mobile Authentication</p>
             <div class="project-desc-even">
               <p>An windows application to secure windows file/folder of an user using password without storing it in cloud or temp files. The application generate a strong password for file and deliver to the user using SMTP protocol after encryption. </p>
+              <div class="github-code-02">
+                <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
+                <span>Repository</span>
+              </div>
             </div>
             <img src="assests/project-icon.png" alt="icon" />
             <img src="assests/project-icon.png" alt="icon" />
@@ -165,7 +241,11 @@
             <span>Featured project</span>
             <p class="project-title">Covid-19 All-in-one website</p>
             <div class="project-desc-odd">
-              <p>An all-in-one web application for Covid-19 disease. Which contains all of the details including symptoms, precautions, vaccines, blogs, cases count, and guidelines. </p>  
+              <p>An all-in-one web application for Covid-19 disease. Which contains all of the details including symptoms, precautions, vaccines, blogs, cases count, and guidelines. </p>
+              <div class="github-code-02">
+                <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
+                <span>Repository</span>
+              </div>
             </div>
             <img src="assests/project-icon.png" alt="icon" />
             <img src="assests/project-icon.png" alt="icon" />
