--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://kit.fontawesome.com/73aac47dbd.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -23,10 +24,9 @@
         <p>A passionate and hard-working. Flexible to work in a harsh and
           challenging environment. Data Science and Web Development
           enthusiasts.</p>
+        <p>Secretary of IEEE Technology and Engineering Management Society, VIT chapter, 2023-24</p>
       </div>
-      <div class="profile-img">
-        <img src="assests/Myself.png" alt="Sanyam Jain" />
-      </div>
+      <div class="profile-img"></div>
     </div>
     <div id="research">
       <div class="center-gradient"></div>
@@ -40,11 +40,13 @@
             <h2>Inappropriate Text Detection and Rephrasing using NLP</h2>
             <p class="project-highlight">Guide: Dr BalaKrushna Tripathy</p>
             <div class="research-additional">
-              <div class="github-code">
-                <img class="github-icon" src="assests/GitHub.png" alt="code" />
-                <span>Repository</span>
-              </div>
-              <span class="project-highlight">Learn More</span>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Inappropriate-Text-Detection-and-Rephrasing-using-NLP">
+                <div class="github-code">
+                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+              <span class="project-highlight">Submitted: Aug, 2023</span>
             </div>
           </div>
         </div>
@@ -55,11 +57,13 @@
             <h2>Krushi Snehi: A Web-based Application for Safe and Smart Farming</h2>
             <p class="project-highlight">Guide: Dr Sumaiya Thaseen</p>
             <div class="research-additional">
-              <div class="github-code">
-                <img class="github-icon" src="assests/GitHub.png" alt="code" />
-                <span>Repository</span>
-              </div>
-              <span class="project-highlight">Learn More</span>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Krushi-Snehi_A-Web-based-Application-for-Safe-and-Smart-Farming">
+                <div class="github-code">
+                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+              <span class="project-highlight">Submitted: Aug, 2023</span>
             </div>
           </div>
         </div>
@@ -70,11 +74,13 @@
             <h2>Revolutionizing Malware Detection: Feature-Based Approach for Targeting Diverse Malware Categories</h2>
             <p class="project-highlight">Guide: Dr Sumaiya Thaseen</p>
             <div class="research-additional">
-              <div class="github-code">
-                <img class="github-icon" src="assests/GitHub.png" alt="code" />
-                <span>Repository</span>
-              </div>
-              <span class="project-highlight">Learn More</span>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Revolutionizing-Malware-Detection_Feature-Based-Approach-for-Targeting-Diverse-Malware-Categories">
+                <div class="github-code">
+                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+              <span class="project-highlight">Submitted: Aug, 2023</span>
             </div>
           </div>
         </div>
@@ -85,11 +91,13 @@
             <h2>INR FOREX Forecasting using Machine Learning and Deep Learning</h2>
             <p class="project-highlight">Guide: Dr Aswani Kumar Cherukuri</p>
             <div class="research-additional">
-              <div class="github-code">
-                <img class="github-icon" src="assests/GitHub.png" alt="code" />
-                <span>Repository</span>
-              </div>
-              <span class="project-highlight">Learn More</span>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/INR-FOREX-Forecasting-using-Machine-Learning-and-Deep-Learning-Techniques">
+                <div class="github-code">
+                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+              <span class="project-highlight">Submitted: June, 2023</span>
             </div>
           </div>
         </div>
@@ -107,7 +115,12 @@
           </div>
           <div class="intern-highlight">
             <span>Company: Papersdrop</span>
-            <span>Learn more</span>
+            <a class="no-highlight" href="https://drive.google.com/file/d/1VyIu_nbWuXOI_yrjuN1XXK21hJ6lYpe_/view?usp=drive_link">
+              <span class="certificate">
+                <i class="fa-regular fa-eye"></i>
+                <p>Certificate</p>
+              </span>
+            </a>
           </div>
         </div>
         <div class="intern-card">
@@ -118,7 +131,12 @@
           </div>
           <div class="intern-highlight">
             <span>Company: Inmovidu</span>
-            <span>Learn more</span>
+            <a class="no-highlight" href="https://drive.google.com/file/d/1usj3EcgBlK1eA5sRXGIuA3SZZXwT_hua/view?usp=drive_link">
+              <span class="certificate">
+                <i class="fa-regular fa-eye"></i>
+                <p>Certificate</p>
+              </span>
+            </a>
           </div>
         </div>
       </div>
@@ -133,7 +151,12 @@
             <div class="achievement-desc-content">
               <h2>Winner</h2>
               <p>Shaastra 2023, IIT Madras</p>
-              <span>Learn more</span>
+              <a class="no-highlight" href="https://drive.google.com/file/d/1xQukJ2MlOMOUwoXvJO4vMs5JWf0l09mq/view?usp=drive_link">
+                <span class="certificate">
+                  <i class="fa-regular fa-eye"></i>
+                  <p>Certificate</p>
+                </span>
+              </a>
             </div>
             <div>
               <span class="achievement-type">Hackathon</span>
@@ -146,7 +169,10 @@
             <div class="achievement-desc-content">
               <h2>Winner</h2>
               <p>Pragyan’23, JC Bose University, Haryana</p>
-              <span>Learn more</span>
+              <span class="certificate">
+                <i class="fa-regular fa-eye"></i>
+                <p>Not Available</p>
+              </span>
             </div>
             <div>
               <span class="achievement-type">Hackathon</span>
@@ -159,7 +185,12 @@
             <div class="achievement-desc-content">
               <h2>First Runner Up</h2>
               <p>Tech Savishkaar, Vasavi College of Engineering, Hyderabad</p>
-              <span>Learn more</span>
+              <a class="no-highlight" href="https://drive.google.com/file/d/1KxT3g9uCUXRrQ1R2ryYsmjLFCNHq5lGR/view?usp=drive_link">
+                <span class="certificate">
+                  <i class="fa-regular fa-eye"></i>
+                  <p>Certificate</p>
+                </span>
+              </a>
             </div>
             <div>
               <span class="achievement-type">Hackathon</span>
@@ -172,7 +203,12 @@
             <div class="achievement-desc-content">
               <h2>Second Runner Up</h2>
               <p>Hack-AI-Thon, Karpagam College of Engineering, Tamil Nadu</p>
-              <span>Learn more</span>
+              <a class="no-highlight" href="https://drive.google.com/file/d/1PRs9mv66H1EEsOFxwfTPvr_mgZia21PU/view?usp=drive_link">
+                <span class="certificate">
+                  <i class="fa-regular fa-eye"></i>
+                  <p>Certificate</p>
+                </span>
+              </a>
             </div>
             <div>
               <span class="achievement-type">Hackathon</span>
@@ -185,7 +221,12 @@
             <div class="achievement-desc-content">
               <h2>Second Runner Up</h2>
               <p>Texify.ai</p>
-              <span>Learn more</span>
+              <a class="no-highlight" href="https://drive.google.com/file/d/1fumJilyZjSazIk3QiXzHSdCe-X6JknsK/view?usp=drive_link">
+                <span class="certificate">
+                  <i class="fa-regular fa-eye"></i>
+                  <p>Certificate</p>
+                </span>
+              </a>
             </div>
             <div>
               <span class="achievement-type">Competition</span>
@@ -204,10 +245,12 @@
             <p class="project-title">Different Hand gesture Recognition using CNN</p>
             <div class="project-desc-odd">
               <p>An application which can classify 10 different type of Hand gestures using CNN and python. With an high accuracy. Moreover, the application can also identify the same in real time video or webcam taking care of noise in image.</p>
-              <div class="github-code-02">
-                <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
-                <span>Repository</span>
-              </div>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Different-Hand-Gesture-Recognition-Using-CNN">
+                <div class="github-code-02">
+                  <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
             </div>
             <img src="assests/project-icon.png" alt="icon" />
             <img src="assests/project-icon.png" alt="icon" />
@@ -226,10 +269,12 @@
             <p class="project-title">Windows Secure Folder using Mobile Authentication</p>
             <div class="project-desc-even">
               <p>An windows application to secure windows file/folder of an user using password without storing it in cloud or temp files. The application generate a strong password for file and deliver to the user using SMTP protocol after encryption. </p>
-              <div class="github-code-02">
-                <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
-                <span>Repository</span>
-              </div>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Windows-Secure-Folder-using-Mobile-Authentication">
+                <div class="github-code-02">
+                  <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
             </div>
             <img src="assests/project-icon.png" alt="icon" />
             <img src="assests/project-icon.png" alt="icon" />
@@ -242,10 +287,12 @@
             <p class="project-title">Covid-19 All-in-one website</p>
             <div class="project-desc-odd">
               <p>An all-in-one web application for Covid-19 disease. Which contains all of the details including symptoms, precautions, vaccines, blogs, cases count, and guidelines. </p>
-              <div class="github-code-02">
-                <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
-                <span>Repository</span>
-              </div>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Covid_19-All-in-one-Website">
+                <div class="github-code-02">
+                  <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
             </div>
             <img src="assests/project-icon.png" alt="icon" />
             <img src="assests/project-icon.png" alt="icon" />
@@ -258,12 +305,32 @@
     </div>
     <div id="contact">
       <h1 class="section-title">Contact</h1>
-      <form class="contact-form">
-        <input type="text" name="name" placeholder="Name" /><br />
-        <input type="email" name="email" placeholder="Email" /><br />
-        <textarea rows="10" cols="30" placeholder="Note"></textarea><br />
-        <button type="submit">Send</button>
-      </form>
+      <div class="contact-details">
+        <a class="no-highlight" href="mailto:sanyamjain.usa@gmail.com">
+          <div class="contact-detail">
+            <i class="fa-solid fa-paper-plane"></i>
+            <span>Send</span>
+          </div>
+        </a>
+        <a class="no-highlight" href="https://github.com/Sanyam-jain30">
+          <div class="contact-detail">
+            <i class="fa-brands fa-github"></i>
+            <span>GitHub</span>
+          </div>
+        </a>
+        <a class="no-highlight" href="https://www.linkedin.com/in/sanyam-jain-611577237/">
+          <div class="contact-detail">
+            <i class="fa-brands fa-linkedin"></i>
+            <span>LinkedIn</span>
+          </div>
+        </a>
+        <a class="no-highlight" href="https://sanyam-jain30.github.io/sanyam/">
+          <div class="contact-detail">
+            <i class="fa-solid fa-globe"></i>
+            <span>Website</span>
+          </div>
+        </a>
+      </div>
     </div>
 </body>
 </html>
