--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   </head>
   <body>
     <nav class="navbar">
-      <h2 style="cursor: none;">Sanyam Jain</h2>
-      <div>
+      <a class="no-highlight" href="#"><h2>Sanyam Jain</h2></a>
+      <div class="navbar-side">
         <a href="#about">About</a>
         <a href="#research">Research</a>
         <a href="#internship">Internships</a>
         <a href="#achievement">Achievements</a>
         <a href="#project">Projects</a>
-        <a href="#contact">Contact</a>
       </div>
     </nav>
     <div id="about">
@@ -25,6 +24,26 @@
           challenging environment. Data Science and Web Development
           enthusiasts.</p>
         <p>Secretary of IEEE Technology and Engineering Management Society, VIT chapter, 2023-24</p>
+        <div class="profiles">
+          <a class="no-highlight" href="mailto:sanyamjain.usa@gmail.com" target="_blank">
+            <img class="profile-icon" src="assests/Gmail.png" alt="mail" />
+          </a>
+          <a class="no-highlight" href="https://github.com/Sanyam-jain30" target="_blank">
+            <img class="profile-icon" src="assests/GitHub.png" alt="github" />
+          </a>
+          <a class="no-highlight" href="https://www.figma.com/@sanyamjain_30" target="_blank">
+            <img class="profile-icon" src="assests/Figma.png" alt="web" />
+          </a>
+          <a class="no-highlight" href="https://www.linkedin.com/in/sanyam-jain-611577237/" target="_blank">
+            <img class="profile-icon" src="assests/Linkedin.png" alt="linkedin" />
+          </a>
+          <a class="no-highlight" href="https://sanyam-jain30.github.io/sanyam/" target="_blank">
+            <img class="profile-icon" src="assests/Web.png" alt="web" />
+          </a>
+          <a class="no-highlight" href="https://unstop.com/u/sanyam_jain_30" target="_blank">
+            <img class="profile-icon" src="assests/unstop.png" alt="unstop" />
+          </a>
+        </div>
       </div>
       <div class="profile-img"></div>
     </div>
@@ -40,7 +59,7 @@
             <h2>Inappropriate Text Detection and Rephrasing using NLP</h2>
             <p class="project-highlight">Guide: Dr BalaKrushna Tripathy</p>
             <div class="research-additional">
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Inappropriate-Text-Detection-and-Rephrasing-using-NLP">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Inappropriate-Text-Detection-and-Rephrasing-using-NLP" target="_blank">
                 <div class="github-code">
                   <img class="github-icon" src="assests/GitHub.png" alt="code" />
                   <span>Repository</span>
@@ -57,7 +76,7 @@
             <h2>Krushi Snehi: A Web-based Application for Safe and Smart Farming</h2>
             <p class="project-highlight">Guide: Dr Sumaiya Thaseen</p>
             <div class="research-additional">
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Krushi-Snehi_A-Web-based-Application-for-Safe-and-Smart-Farming">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Krushi-Snehi_A-Web-based-Application-for-Safe-and-Smart-Farming" target="_blank">
                 <div class="github-code">
                   <img class="github-icon" src="assests/GitHub.png" alt="code" />
                   <span>Repository</span>
@@ -74,7 +93,7 @@
             <h2>Revolutionizing Malware Detection: Feature-Based Approach for Targeting Diverse Malware Categories</h2>
             <p class="project-highlight">Guide: Dr Sumaiya Thaseen</p>
             <div class="research-additional">
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Revolutionizing-Malware-Detection_Feature-Based-Approach-for-Targeting-Diverse-Malware-Categories">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Revolutionizing-Malware-Detection_Feature-Based-Approach-for-Targeting-Diverse-Malware-Categories" target="_blank">
                 <div class="github-code">
                   <img class="github-icon" src="assests/GitHub.png" alt="code" />
                   <span>Repository</span>
@@ -91,7 +110,7 @@
             <h2>INR FOREX Forecasting using Machine Learning and Deep Learning</h2>
             <p class="project-highlight">Guide: Dr Aswani Kumar Cherukuri</p>
             <div class="research-additional">
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/INR-FOREX-Forecasting-using-Machine-Learning-and-Deep-Learning-Techniques">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/INR-FOREX-Forecasting-using-Machine-Learning-and-Deep-Learning-Techniques" target="_blank">
                 <div class="github-code">
                   <img class="github-icon" src="assests/GitHub.png" alt="code" />
                   <span>Repository</span>
@@ -115,7 +134,7 @@
           </div>
           <div class="intern-highlight">
             <span>Company: Papersdrop</span>
-            <a class="no-highlight" href="https://drive.google.com/file/d/1VyIu_nbWuXOI_yrjuN1XXK21hJ6lYpe_/view?usp=drive_link">
+            <a class="no-highlight" href="https://drive.google.com/file/d/1VyIu_nbWuXOI_yrjuN1XXK21hJ6lYpe_/view?usp=drive_link" target="_blank">
               <span class="certificate">
                 <i class="fa-regular fa-eye"></i>
                 <p>Certificate</p>
@@ -131,7 +150,7 @@
           </div>
           <div class="intern-highlight">
             <span>Company: Inmovidu</span>
-            <a class="no-highlight" href="https://drive.google.com/file/d/1usj3EcgBlK1eA5sRXGIuA3SZZXwT_hua/view?usp=drive_link">
+            <a class="no-highlight" href="https://drive.google.com/file/d/1usj3EcgBlK1eA5sRXGIuA3SZZXwT_hua/view?usp=drive_link" target="_blank">
               <span class="certificate">
                 <i class="fa-regular fa-eye"></i>
                 <p>Certificate</p>
@@ -151,7 +170,7 @@
             <div class="achievement-desc-content">
               <h2>Winner</h2>
               <p>Shaastra 2023, IIT Madras</p>
-              <a class="no-highlight" href="https://drive.google.com/file/d/1xQukJ2MlOMOUwoXvJO4vMs5JWf0l09mq/view?usp=drive_link">
+              <a class="no-highlight" href="https://drive.google.com/file/d/1xQukJ2MlOMOUwoXvJO4vMs5JWf0l09mq/view?usp=drive_link" target="_blank">
                 <span class="certificate">
                   <i class="fa-regular fa-eye"></i>
                   <p>Certificate</p>
@@ -169,10 +188,12 @@
             <div class="achievement-desc-content">
               <h2>Winner</h2>
               <p>Pragyan’23, JC Bose University, Haryana</p>
-              <span class="certificate">
-                <i class="fa-regular fa-eye"></i>
-                <p>Not Available</p>
-              </span>
+              <a class="no-highlight" href="https://drive.google.com/file/d/1SiTW-66RJPvzDCY4cMyKHGmdfaWSa_ae/view?usp=sharing" target="_blank">
+                <span class="certificate">
+                  <i class="fa-regular fa-eye"></i>
+                  <p>Certificate</p>
+                </span>
+              </a>
             </div>
             <div>
               <span class="achievement-type">Hackathon</span>
@@ -185,7 +206,7 @@
             <div class="achievement-desc-content">
               <h2>First Runner Up</h2>
               <p>Tech Savishkaar, Vasavi College of Engineering, Hyderabad</p>
-              <a class="no-highlight" href="https://drive.google.com/file/d/1KxT3g9uCUXRrQ1R2ryYsmjLFCNHq5lGR/view?usp=drive_link">
+              <a class="no-highlight" href="https://drive.google.com/file/d/1KxT3g9uCUXRrQ1R2ryYsmjLFCNHq5lGR/view?usp=drive_link" target="_blank">
                 <span class="certificate">
                   <i class="fa-regular fa-eye"></i>
                   <p>Certificate</p>
@@ -203,7 +224,7 @@
             <div class="achievement-desc-content">
               <h2>Second Runner Up</h2>
               <p>Hack-AI-Thon, Karpagam College of Engineering, Tamil Nadu</p>
-              <a class="no-highlight" href="https://drive.google.com/file/d/1PRs9mv66H1EEsOFxwfTPvr_mgZia21PU/view?usp=drive_link">
+              <a class="no-highlight" href="https://drive.google.com/file/d/1PRs9mv66H1EEsOFxwfTPvr_mgZia21PU/view?usp=drive_link" target="_blank">
                 <span class="certificate">
                   <i class="fa-regular fa-eye"></i>
                   <p>Certificate</p>
@@ -221,7 +242,7 @@
             <div class="achievement-desc-content">
               <h2>Second Runner Up</h2>
               <p>Texify.ai</p>
-              <a class="no-highlight" href="https://drive.google.com/file/d/1fumJilyZjSazIk3QiXzHSdCe-X6JknsK/view?usp=drive_link">
+              <a class="no-highlight" href="https://drive.google.com/file/d/1fumJilyZjSazIk3QiXzHSdCe-X6JknsK/view?usp=drive_link" target="_blank">
                 <span class="certificate">
                   <i class="fa-regular fa-eye"></i>
                   <p>Certificate</p>
@@ -245,7 +266,7 @@
             <p class="project-title">Different Hand gesture Recognition using CNN</p>
             <div class="project-desc-odd">
               <p>An application which can classify 10 different type of Hand gestures using CNN and python. With an high accuracy. Moreover, the application can also identify the same in real time video or webcam taking care of noise in image.</p>
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Different-Hand-Gesture-Recognition-Using-CNN">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Different-Hand-Gesture-Recognition-Using-CNN" target="_blank">
                 <div class="github-code-02">
                   <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
                   <span>Repository</span>
@@ -269,7 +290,7 @@
             <p class="project-title">Windows Secure Folder using Mobile Authentication</p>
             <div class="project-desc-even">
               <p>An windows application to secure windows file/folder of an user using password without storing it in cloud or temp files. The application generate a strong password for file and deliver to the user using SMTP protocol after encryption. </p>
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Windows-Secure-Folder-using-Mobile-Authentication">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Windows-Secure-Folder-using-Mobile-Authentication" target="_blank">
                 <div class="github-code-02">
                   <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
                   <span>Repository</span>
@@ -287,7 +308,7 @@
             <p class="project-title">Covid-19 All-in-one website</p>
             <div class="project-desc-odd">
               <p>An all-in-one web application for Covid-19 disease. Which contains all of the details including symptoms, precautions, vaccines, blogs, cases count, and guidelines. </p>
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Covid_19-All-in-one-Website">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Covid_19-All-in-one-Website" target="_blank">
                 <div class="github-code-02">
                   <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
                   <span>Repository</span>
@@ -301,35 +322,6 @@
             <div></div>
           </div>
         </div>
-      </div>
-    </div>
-    <div id="contact">
-      <h1 class="section-title">Contact</h1>
-      <div class="contact-details">
-        <a class="no-highlight" href="mailto:sanyamjain.usa@gmail.com">
-          <div class="contact-detail">
-            <i class="fa-solid fa-paper-plane"></i>
-            <span>Send</span>
-          </div>
-        </a>
-        <a class="no-highlight" href="https://github.com/Sanyam-jain30">
-          <div class="contact-detail">
-            <i class="fa-brands fa-github"></i>
-            <span>GitHub</span>
-          </div>
-        </a>
-        <a class="no-highlight" href="https://www.linkedin.com/in/sanyam-jain-611577237/">
-          <div class="contact-detail">
-            <i class="fa-brands fa-linkedin"></i>
-            <span>LinkedIn</span>
-          </div>
-        </a>
-        <a class="no-highlight" href="https://sanyam-jain30.github.io/sanyam/">
-          <div class="contact-detail">
-            <i class="fa-solid fa-globe"></i>
-            <span>Website</span>
-          </div>
-        </a>
       </div>
     </div>
 </body>
