--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h1 class="section-title">Research</h1>
       <div class="research-cards">
         <div class="research-card">
-          <span class="project-decision">Awaiting Decision at icSoftComp2023</span>
+          <span class="project-decision">Accepted at icSoftComp2023</span>
           <img class="research-illustrator" src="assests/research-card-01.png" alt="research" />
           <div>
             <h2>Inappropriate Text Detection and Rephrasing using NLP</h2>
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="research-card">
-          <span class="project-decision">Accepted at ICCST 2023</span>
+          <span class="project-decision">Presented at ICCST 2023</span>
           <img class="research-illustrator" src="assests/research-card-03.png" alt="research" />
           <div>
             <h2>Revolutionizing Malware Detection: Feature-Based Approach for Targeting Diverse Malware Categories</h2>
@@ -98,6 +98,12 @@
                   <img class="github-icon" src="assests/GitHub.png" alt="code" />
                   <span>Repository</span>
                 </div>
+              </a>
+              <a class="no-highlight-certificate" href="https://drive.google.com/file/d/18UK8AQ0zhICfGl7-s_Sf4K5BPKN1weGW/view?usp=sharing" target="_blank">
+                <span class="certificate">
+                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                  <span>Certificate</span>
+                </span>
               </a>
               <span class="project-highlight">Submitted: Aug, 2023</span>
             </div>
@@ -116,7 +122,7 @@
                   <span>Repository</span>
                 </div>
               </a>
-              <span class="project-highlight">Submitted: June, 2023</span>
+              <span class="project-highlight">Submitted: July, 2023</span>
             </div>
           </div>
         </div>
@@ -136,7 +142,7 @@
             <span>Company: Papersdrop</span>
             <a class="no-highlight" href="https://drive.google.com/file/d/1VyIu_nbWuXOI_yrjuN1XXK21hJ6lYpe_/view?usp=drive_link" target="_blank">
               <span class="certificate">
-                <i class="fa-regular fa-eye"></i>
+                <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
                 <p>Certificate</p>
               </span>
             </a>
@@ -152,7 +158,7 @@
             <span>Company: Inmovidu</span>
             <a class="no-highlight" href="https://drive.google.com/file/d/1usj3EcgBlK1eA5sRXGIuA3SZZXwT_hua/view?usp=drive_link" target="_blank">
               <span class="certificate">
-                <i class="fa-regular fa-eye"></i>
+                <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
                 <p>Certificate</p>
               </span>
             </a>
@@ -172,7 +178,7 @@
               <p>Shaastra 2023, IIT Madras</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1xQukJ2MlOMOUwoXvJO4vMs5JWf0l09mq/view?usp=drive_link" target="_blank">
                 <span class="certificate">
-                  <i class="fa-regular fa-eye"></i>
+                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
                   <p>Certificate</p>
                 </span>
               </a>
@@ -190,7 +196,7 @@
               <p>Pragyan’23, JC Bose University, Haryana</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1SiTW-66RJPvzDCY4cMyKHGmdfaWSa_ae/view?usp=sharing" target="_blank">
                 <span class="certificate">
-                  <i class="fa-regular fa-eye"></i>
+                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
                   <p>Certificate</p>
                 </span>
               </a>
@@ -208,7 +214,7 @@
               <p>Tech Savishkaar, Vasavi College of Engineering, Hyderabad</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1KxT3g9uCUXRrQ1R2ryYsmjLFCNHq5lGR/view?usp=drive_link" target="_blank">
                 <span class="certificate">
-                  <i class="fa-regular fa-eye"></i>
+                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
                   <p>Certificate</p>
                 </span>
               </a>
@@ -226,7 +232,7 @@
               <p>Hack-AI-Thon, Karpagam College of Engineering, Tamil Nadu</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1PRs9mv66H1EEsOFxwfTPvr_mgZia21PU/view?usp=drive_link" target="_blank">
                 <span class="certificate">
-                  <i class="fa-regular fa-eye"></i>
+                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
                   <p>Certificate</p>
                 </span>
               </a>
@@ -244,7 +250,7 @@
               <p>Texify.ai</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1fumJilyZjSazIk3QiXzHSdCe-X6JknsK/view?usp=drive_link" target="_blank">
                 <span class="certificate">
-                  <i class="fa-regular fa-eye"></i>
+                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
                   <p>Certificate</p>
                 </span>
               </a>
