--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="gradient"></div>
       <div class="desc">
         <h2>Hello! I am <span style="color: #7127BA;">Sanyam Jain</span></h2>
-        <p>A final year B.Tech Information Technology student of Vellore Institute of Technology.</p>
+        <p>A final year B.Tech Information Technology student at Vellore Institute of Technology.</p>
         <p>A passionate and hard-working. Flexible to work in a harsh and
           challenging environment. Data Science and Web Development
           enthusiasts.</p>
@@ -265,6 +265,27 @@
     <div id="project">
       <h1 class="section-title title-project">Projects</h1>
       <div class="project-cards">
+        <div class="project-card-even">
+          <div class="right-gradient-even"></div>
+          <div class="project-img-even project-0">
+            <div></div>
+          </div>
+          <div class="project-block-even">
+            <span>Featured project</span>
+            <p class="project-title">Disease Diet Restaurant Finder</p>
+            <div class="project-desc-even">
+              <p>A mobile application to find restaurants which are best fit to a disease patient diet using their disease name and also providing map display of the restaurant from our place with suggested and safe food items can have.</p>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Disease-Diet-Restaurant-Finder" target="_blank">
+                <div class="github-code-02">
+                  <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+            </div>
+            <img src="assests/project-icon.png" alt="icon" />
+            <img src="assests/project-icon.png" alt="icon" />
+          </div>
+        </div>
         <div class="project-card-odd">
           <div class="right-gradient-odd"></div>
           <div class="project-block-odd">
