--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@
       <h1 class="section-title">Internships</h1>
       <div class="intern-cards">
         <div class="intern-card">
+          <span class="intern-dur">Starting: 1st Jan, 2024</span>
+          <div class="intern-title">
+            <img src="assests/intern-card-00.png" alt="intern-icon">
+            <h2>Student Intern at National Remote Sensing Center, ISRO</h2>
+          </div>
+          <div class="intern-highlight">
+            <span>Company: NRSC, ISRO</span>
+          </div>
+        </div>
+        <div class="intern-card">
           <span class="intern-dur">3 months</span>
           <div class="intern-title">
             <img src="assests/intern-card-01.png" alt="intern-icon">
