--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
                   <span>Repository</span>
                 </div>
               </a>
+               <a class="no-highlight-certificate" href="https://drive.google.com/file/d/13WRiz_pERUVZVQyW8uBEHbY1a9lpDP2y/view?usp=sharing" target="_blank">
+                <span class="certificate">
+                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                  <span>Presentation</span>
+                </span>
+              </a>
+              <a class="no-highlight-certificate" href="https://drive.google.com/file/d/1W3FLq3NKMfBqYIXSTmhjIcrPwjo6mA7Y/view?usp=sharing" target="_blank">
+                <span class="certificate">
+                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                  <span>Contribution</span>
+                </span>
+              </a>
               <span class="project-highlight">Submitted: Aug, 2023</span>
             </div>
           </div>
@@ -102,7 +114,7 @@
               <a class="no-highlight-certificate" href="https://drive.google.com/file/d/18UK8AQ0zhICfGl7-s_Sf4K5BPKN1weGW/view?usp=sharing" target="_blank">
                 <span class="certificate">
                   <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
-                  <span>Certificate</span>
+                  <span>Presentation</span>
                 </span>
               </a>
               <span class="project-highlight">Submitted: Aug, 2023</span>
