--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div class="navbar-side">
         <a href="#about">About</a>
         <a href="#research">Research</a>
+        <a href="#grade">Grade</a>
         <a href="#internship">Internships</a>
         <a href="#achievement">Achievements</a>
         <a href="#project">Projects</a>
@@ -135,6 +136,57 @@
                 </div>
               </a>
               <span class="project-highlight">Submitted: July, 2023</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="grade">
+      <div class="center-gradient"></div>
+      <h1 class="section-title">Grades</h1>
+      <div class="grade-cards">
+        <div class="grade-card">
+          <span class="grade-dur">May 2020 - Present</span>
+          <div class="grade-title">
+            <img src="assests/degree.png" alt="grade-icon">
+            <div class="grade-container">
+              <h2>Vellore Institute of Technology, Vellore</h2>
+              <div class="outer-circle">
+                <div class="inner-circle">
+                  <span>9.15 / 10</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grade-highlight">
+            <span>Bachelor of Technology in Information Technology</span>
+          </div>
+        </div>
+        <div class="grade-card">
+          <span class="grade-dur">March 2018 - March 2020</span>
+          <div class="grade-title">
+            <img src="assests/junior-college.png" alt="grade-icon">
+            <div class="grade-container">
+              <h2>Narayana Junior College, Hyderabad</h2>
+              <div class="outer-circle">
+                <div class="inner-circle">
+                  <span>94.8 / 100</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="grade-card">
+          <span class="grade-dur">March 2013 - March 2018</span>
+          <div class="grade-title">
+            <img src="assests/school.png" alt="grade-icon">
+            <div class="grade-container">
+              <h2>Sri Chaitanya Techno School, Hyderabad</h2>
+              <div class="outer-circle">
+                <div class="inner-circle">
+                  <span>9.3 / 10</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
