--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
             <img src="assests/achievement-card-01.png" alt="achievement-icon">
             <div class="achievement-desc-content">
               <h2>Winner</h2>
-              <p>Shaastra 2023, IIT Madras</p>
+              <h4>Competing 587 participants</h4>
+              <p>Epidemiology Hackathon,Shaastra 2023, IIT Madras</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1xQukJ2MlOMOUwoXvJO4vMs5JWf0l09mq/view?usp=drive_link" target="_blank">
                 <span class="certificate">
                   <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
@@ -267,6 +268,7 @@
             <img src="assests/achievement-card-02.png" alt="achievement-icon">
             <div class="achievement-desc-content">
               <h2>Winner</h2>
+              <h4>Competing 111 participants</h4>
               <p>Pragyan’23, JC Bose University, Haryana</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1SiTW-66RJPvzDCY4cMyKHGmdfaWSa_ae/view?usp=sharing" target="_blank">
                 <span class="certificate">
@@ -285,6 +287,7 @@
             <img src="assests/achievement-card-03.png" alt="achievement-icon">
             <div class="achievement-desc-content">
               <h2>First Runner Up</h2>
+              <h4>Competing 1,177 participants</h4>
               <p>Tech Savishkaar, Vasavi College of Engineering, Hyderabad</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1KxT3g9uCUXRrQ1R2ryYsmjLFCNHq5lGR/view?usp=drive_link" target="_blank">
                 <span class="certificate">
@@ -303,6 +306,7 @@
             <img src="assests/achievement-card-04.png" alt="achievement-icon">
             <div class="achievement-desc-content">
               <h2>Second Runner Up</h2>
+              <h4>Competing 835 participants</h4>
               <p>Hack-AI-Thon, Karpagam College of Engineering, Tamil Nadu</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1PRs9mv66H1EEsOFxwfTPvr_mgZia21PU/view?usp=drive_link" target="_blank">
                 <span class="certificate">
@@ -321,7 +325,8 @@
             <img src="assests/achievement-card-05.png" alt="achievement-icon">
             <div class="achievement-desc-content">
               <h2>Second Runner Up</h2>
-              <p>Texify.ai</p>
+              <h4>Competing 179 participants</h4>
+              <p>AI PromptThon 2.0, Texify Company</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1fumJilyZjSazIk3QiXzHSdCe-X6JknsK/view?usp=drive_link" target="_blank">
                 <span class="certificate">
                   <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
