--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
                   <span>Repository</span>
                 </div>
               </a>
+              <a class="no-highlight-certificate" href="https://drive.google.com/file/d/1BMMenEICztnPVW9GhtqAl04FUsLDGr6Q/view?usp=drive_link" target="_blank">
+                <span class="certificate">
+                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                  <span>Presentation</span>
+                </span>
+              </a>
               <span class="project-highlight">Submitted: Aug, 2023</span>
             </div>
           </div>
@@ -83,7 +89,7 @@
                   <span>Repository</span>
                 </div>
               </a>
-               <a class="no-highlight-certificate" href="https://drive.google.com/file/d/13WRiz_pERUVZVQyW8uBEHbY1a9lpDP2y/view?usp=sharing" target="_blank">
+              <a class="no-highlight-certificate" href="https://drive.google.com/file/d/13WRiz_pERUVZVQyW8uBEHbY1a9lpDP2y/view?usp=sharing" target="_blank">
                 <span class="certificate">
                   <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
                   <span>Presentation</span>
