--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div class="gradient"></div>
       <div class="desc">
         <h2>Hello! I am <span style="color: #7127BA;">Sanyam Jain</span></h2>
-        <p>A final year B.Tech Information Technology student at Vellore Institute of Technology.</p>
-        <p>A passionate and hard-working. Flexible to work in a harsh and
-          challenging environment. Data Science and Web Development
-          enthusiasts.</p>
+        <p>A final year B.Tech Information Technology student at Vellore Institute of Technology, Vellore, India.</p>
+        <p>A passionate and hard-working person. 
+          Encourage collaborative work to build connections and gain diverse knowledge. 
+        </p>
         <p>Secretary of IEEE Technology and Engineering Management Society, VIT chapter, 2023-24</p>
         <div class="profiles">
           <a class="no-highlight" href="mailto:sanyamjain.usa@gmail.com" target="_blank">
