--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <h1 class="section-title">Internships</h1>
       <div class="intern-cards">
         <div class="intern-card">
-          <span class="intern-dur">Starting: 1st Jan, 2024</span>
+          <span class="intern-dur">1st Jan, 2024 - Present</span>
           <div class="intern-title">
             <img src="assests/intern-card-00.png" alt="intern-icon">
             <h2>Student Intern at National Remote Sensing Center, ISRO</h2>
