--- a/index.html
+++ b/index.html
@@ -54,7 +54,24 @@
       <h1 class="section-title">Research</h1>
       <div class="research-cards">
         <div class="research-card">
-          <span class="project-decision">Accepted at icSoftComp2023</span>
+          <span class="project-decision">Awaiting Decision at Knowledge and Information Systems Journal</span>
+          <img class="research-illustrator" src="assests/research-card-04.png" alt="research" />
+          <div>
+            <h2>Advancing Cancer Diagnosis: A Deep Learning-Based Framework for Multi-Class Classification of Diverse Cancer Types via X-ray Imaging</h2>
+            <p class="project-highlight">Guide: Dr Sumathy S, Dr Durai Raj</p>
+            <div class="research-additional">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Deep-Learning-Based-Framework-for-Multi-Class-Classification-of-Diverse-Cancer-Types" target="_blank">
+                <div class="github-code">
+                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+              <span class="project-highlight">Submitted: Jan, 2024</span>
+            </div>
+          </div>
+        </div>
+        <div class="research-card">
+          <span class="project-decision">Presented at icSoftComp2023</span>
           <img class="research-illustrator" src="assests/research-card-01.png" alt="research" />
           <div>
             <h2>Inappropriate Text Detection and Rephrasing using NLP</h2>
@@ -77,7 +94,7 @@
           </div>
         </div>
         <div class="research-card">
-          <span class="project-decision">Accepted at ICTCS 2023</span>
+          <span class="project-decision">Presented at ICTCS 2023</span>
           <img class="research-illustrator" src="assests/research-card-02.png" alt="research" />
           <div>
             <h2>Krushi Snehi: A Web-based Application for Safe and Smart Farming</h2>
@@ -128,22 +145,8 @@
             </div>
           </div>
         </div>
-        <div class="research-card">
-          <span class="project-decision">Awaiting Decision at SSRN Elsevier Journal 2023</span>
-          <img class="research-illustrator" src="assests/research-card-04.png" alt="research" />
-          <div>
-            <h2>INR FOREX Forecasting using Machine Learning and Deep Learning</h2>
-            <p class="project-highlight">Guide: Dr Aswani Kumar Cherukuri</p>
-            <div class="research-additional">
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/INR-FOREX-Forecasting-using-Machine-Learning-and-Deep-Learning-Techniques" target="_blank">
-                <div class="github-code">
-                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
-                  <span>Repository</span>
-                </div>
-              </a>
-              <span class="project-highlight">Submitted: July, 2023</span>
-            </div>
-          </div>
+        <div class="more">
+          <span class="project-highlight" style="float: right;">+1 more</span>
         </div>
       </div>
     </div>
@@ -345,6 +348,27 @@
             </div>
           </div>
         </div>
+        <div class="achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-06.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Silver medal and Achievement Certificate</h2>
+              <p>Terapanth Professional Forum</p>
+              <a class="no-highlight" href="https://drive.google.com/file/d/1rXQYaYxIzSbGpHvUZC2PI92kA5ku6zla/view?usp=sharing" target="_blank">
+                <span class="certificate">
+                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                  <p>Certificate</p>
+                </span>
+              </a>
+            </div>
+            <div>
+              <span class="achievement-type">Award</span>
+            </div>
+          </div>
+        </div>
+        <div class="more">
+          <span class="project-highlight">+2 more</span>
+        </div>
       </div>
     </div>
     <div id="project">
@@ -433,6 +457,9 @@
           <div class="project-img-odd project-3">
             <div></div>
           </div>
+        </div>
+        <div class="more">
+          <span class="project-highlight" style="float: right;">+4 more</span>
         </div>
       </div>
     </div>
