--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="#internship">Internships</a>
         <a href="#achievement">Achievements</a>
         <a href="#project">Projects</a>
+        <a href="#work">Works</a>
       </div>
     </nav>
     <div id="about">
@@ -184,6 +185,9 @@
               </div>
             </div>
           </div>
+          <div class="grade-highlight">
+            <span>Mathematics, Physics, Chemistry</span>
+          </div>
         </div>
         <div class="grade-card">
           <span class="grade-dur">March 2013 - March 2018</span>
@@ -218,7 +222,7 @@
         <div class="intern-card">
           <span class="intern-dur">3 months</span>
           <div class="intern-title">
-            <img src="assests/intern-card-01.png" alt="intern-icon">
+            <img style="width: 265px;" src="assests/intern-card-01.png" alt="intern-icon">
             <h2>Full Stack Web Developer</h2>
           </div>
           <div class="intern-highlight">
@@ -461,6 +465,13 @@
         <div class="more">
           <span class="project-highlight" style="float: right;">+4 more</span>
         </div>
+      </div>
+    </div>
+    <div id="work">
+      <div class="center-gradient"></div>
+      <h1 class="section-title">Works</h1>
+      <div class="work-cards">
+
       </div>
     </div>
 </body>
