--- a/index.html
+++ b/index.html
@@ -467,12 +467,12 @@
         </div>
       </div>
     </div>
-    <div id="work">
+    <!-- <div id="work">
       <div class="center-gradient"></div>
       <h1 class="section-title">Works</h1>
       <div class="work-cards">
 
       </div>
-    </div>
+    </div> -->
 </body>
 </html>
